// Vitest Snapshot v1

exports[`HStack > should render correctly with children 1`] = `
<div>
  <div
    class="flex space-x-3 bg-red-500 rapid-stack"
  >
    <div>
      <p>
        Hello world!
      </p>
    </div>
    <div>
      <p>
        Hello world!
      </p>
    </div>
    <div>
      <p>
        Hello world!
      </p>
    </div>
    <div>
      <p>
        Hello world!
      </p>
    </div>
  </div>
</div>
`;

exports[`HStack > should render correctly with non default props 1`] = `
<div>
  <div
    class="flex space-x-1.5 p-4 rapid-stack"
  />
</div>
`;

exports[`HStack > should render default correctly 1`] = `
<div>
  <div
    class="flex space-x-6 rapid-stack"
  />
</div>
`;
